@@ -3806,9 +3806,10 @@ password=P@ssW0rd!
                 <td>The format used to parse the lastbuild date.</td>
             </tr>
             <tr>
-               <td>property</td>
-               <td>No</td>
-               <td>Unsupported!</td>
+                <td>property</td>
+                <td>No</td>
+                <td>Set this property if a modification has occurred.  For use
+                in conditionally controlling the build later.</td>
             </tr>
             </tbody>
         </table>
